@@ -22,11 +22,11 @@
 package org.isf.patient.rest;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.isf.admission.manager.AdmissionBrowserManager;
 import org.isf.admission.model.Admission;
@@ -43,10 +43,8 @@ import org.isf.utils.exception.model.OHExceptionMessage;
 import org.isf.utils.pagination.PagedResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
 import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -54,15 +52,18 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 
-@RestController(value = "/patients")
+@RestController
 @Tag(name = "Patients")
 @SecurityRequirement(name = "bearerAuth")
+@RequestMapping(produces = MediaType.APPLICATION_JSON_VALUE)
 public class PatientController {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(PatientController.class);
@@ -70,20 +71,20 @@ public class PatientController {
 	// TODO: to centralize
 	protected static final String DEFAULT_PAGE_SIZE = "80";
 
-	@Autowired
-	protected PatientBrowserManager patientManager;
+	private final PatientBrowserManager patientManager;
 
-	@Autowired
-	protected AdmissionBrowserManager admissionManager;
+	private final AdmissionBrowserManager admissionManager;
 
-	@Autowired
-	private PatientConsensusBrowserManager patientConsensusManager;
+	private final PatientConsensusBrowserManager patientConsensusManager;
 
-	@Autowired
-	protected PatientMapper patientMapper;
+	private final PatientMapper patientMapper;
 
-	public PatientController(PatientBrowserManager patientManager, AdmissionBrowserManager admissionManager, PatientMapper patientMapper,
-					PatientConsensusBrowserManager patientConsensusManager) {
+	public PatientController(
+		PatientBrowserManager patientManager,
+		AdmissionBrowserManager admissionManager,
+		PatientMapper patientMapper,
+		PatientConsensusBrowserManager patientConsensusManager
+	) {
 		this.patientManager = patientManager;
 		this.admissionManager = admissionManager;
 		this.patientMapper = patientMapper;
@@ -93,12 +94,13 @@ public class PatientController {
 	/**
 	 * Create new {@link Patient}.
 	 *
-	 * @param newPatient
-	 * @return
-	 * @throws OHServiceException
+	 * @param newPatient Patient payload
+	 * @return The created patient
+	 * @throws OHServiceException When failed to create patient
 	 */
-	@PostMapping(value = "/patients", produces = MediaType.APPLICATION_JSON_VALUE)
-	ResponseEntity<PatientDTO> newPatient(@RequestBody PatientDTO newPatient) throws OHServiceException {
+	@PostMapping(value = "/patients")
+	@ResponseStatus(HttpStatus.CREATED)
+	public PatientDTO newPatient(@RequestBody PatientDTO newPatient) throws OHServiceException {
 		String name = StringUtils.hasLength(newPatient.getName()) ? newPatient.getFirstName() + ' ' + newPatient.getSecondName() : newPatient.getName();
 		LOGGER.info("Create patient '{}'.", name);
 
@@ -113,19 +115,21 @@ public class PatientController {
 		if (patient == null) {
 			throw new OHAPIException(new OHExceptionMessage("Patient not created."));
 		}
-		return ResponseEntity.status(HttpStatus.CREATED).body(patientMapper.map2DTO(patient));
+
+		return patientMapper.map2DTO(patient);
 	}
 
-	@PutMapping(value = "/patients/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	ResponseEntity<PatientDTO> updatePatient(@PathVariable int code, @RequestBody PatientDTO updatePatient) throws OHServiceException {
+	@PutMapping(value = "/patients/{code}")
+	public PatientDTO updatePatient(@PathVariable int code, @RequestBody PatientDTO updatePatient) throws OHServiceException {
 		LOGGER.info("Update patient code: '{}'.", code);
 		if (!updatePatient.getCode().equals(code)) {
 			throw new OHAPIException(new OHExceptionMessage("Patient code mismatch."));
 		}
 		Patient patientRead = patientManager.getPatientById(code);
 		if (patientRead == null) {
-			throw new OHAPIException(new OHExceptionMessage("Patient not found."));
+			throw new OHAPIException(new OHExceptionMessage("Patient not found."), HttpStatus.NOT_FOUND);
 		}
+
 		Optional<PatientConsensus> patientConsensus = patientConsensusManager.getPatientConsensusByUserId(patientRead.getCode());
 		if (patientConsensus.isEmpty()) {
 			throw new OHAPIException(new OHExceptionMessage("PatientConsensus not found."));
@@ -141,48 +145,50 @@ public class PatientController {
 		if (patient == null) {
 			throw new OHAPIException(new OHExceptionMessage("Patient not updated."));
 		}
-		PatientDTO patientDTO = patientMapper.map2DTO(patient);
-		return ResponseEntity.ok(patientDTO);
+
+		return patientMapper.map2DTO(patient);
 	}
 
-	@GetMapping(value = "/patients", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Page<PatientDTO>> getPatients(@RequestParam(value = "page", required = false, defaultValue = "0") int page,
-					@RequestParam(value = "size", required = false, defaultValue = DEFAULT_PAGE_SIZE) int size) throws OHServiceException {
+	@GetMapping(value = "/patients")
+	public Page<PatientDTO> getPatients(
+		@RequestParam(value = "page", required = false, defaultValue = "0") int page,
+		@RequestParam(value = "size", required = false, defaultValue = DEFAULT_PAGE_SIZE) int size
+	) throws OHServiceException {
 		LOGGER.info("Get patients page: {}  size: {}.", page, size);
 		PagedResponse<Patient> patients = patientManager.getPatientsPageable(page, size);
-		if (patients.getData().isEmpty()) {
-			LOGGER.info("The patient list is empty.");
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(null);
-		}
+
 		Page<PatientDTO> patientPageableDTO = new Page<>();
 		List<PatientDTO> patientsDTO = patientMapper.map2DTOList(patients.getData());
 		patientPageableDTO.setData(patientsDTO);
 		patientPageableDTO.setPageInfo(patientMapper.setParameterPageInfo(patients.getPageInfo()));
-		return ResponseEntity.ok(patientPageableDTO);
+
+		return patientPageableDTO;
 	}
 
-	@GetMapping(value = "/patients/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<PatientDTO> getPatient(@PathVariable("code") int code) throws OHServiceException {
+	@GetMapping(value = "/patients/{code}")
+	public PatientDTO getPatient(@PathVariable("code") int code) throws OHServiceException {
 		LOGGER.info("Get patient code: '{}'.", code);
 		Patient patient = patientManager.getPatientById(code);
 		LOGGER.info("Patient retrieved: {}.", patient);
 		if (patient == null) {
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(null);
+			throw new OHAPIException(new OHExceptionMessage("Patient not found."), HttpStatus.NOT_FOUND);
 		}
+
 		LOGGER.debug("AdmissionBrowserManager injected: {}.", admissionManager);
 		Admission admission = admissionManager.getCurrentAdmission(patient);
 		LOGGER.debug("Admission retrieved: {}.", admission);
 		Boolean status = admission != null;
-		PatientDTO patientDTO = patientMapper.map2DTOWS(patient, status);
-		return ResponseEntity.ok(patientDTO);
+
+		return patientMapper.map2DTOWS(patient, status);
 	}
 
-	@GetMapping(value = "/patients/search", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<List<PatientDTO>> searchPatient(@RequestParam(value = "firstName", defaultValue = "", required = false) String firstName,
-					@RequestParam(value = "secondName", defaultValue = "", required = false) String secondName,
-					@RequestParam(value = "birthDate", defaultValue = "", required = false) LocalDateTime birthDate,
-					@RequestParam(value = "address", defaultValue = "", required = false) String address) throws OHServiceException {
-
+	@GetMapping(value = "/patients/search")
+	public List<PatientDTO> searchPatient(
+		@RequestParam(value = "firstName", defaultValue = "", required = false) String firstName,
+		@RequestParam(value = "secondName", defaultValue = "", required = false) String secondName,
+		@RequestParam(value = "birthDate", defaultValue = "", required = false) LocalDateTime birthDate,
+		@RequestParam(value = "address", defaultValue = "", required = false) String address
+	) throws OHServiceException {
 		Map<String, Object> params = new HashMap<>();
 
 		if (firstName != null && !firstName.isEmpty()) {
@@ -201,76 +207,73 @@ public class PatientController {
 			params.put("address", address);
 		}
 
-		List<Patient> patientList = null;
+		List<Patient> patientList = new ArrayList<>();
 		if (!params.entrySet().isEmpty()) {
 			patientList = patientManager.getPatients(params);
 		}
 
-		if (patientList == null) {
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(null);
-		}
-
-		List<PatientDTO> patientListDTO = patientList.stream().map(patient -> {
+		return patientList.stream().map(patient -> {
 			Admission admission = admissionManager.getCurrentAdmission(patient);
 			Boolean status = admission != null;
 			return patientMapper.map2DTOWS(patient, status);
-		}).collect(Collectors.toList());
-		return ResponseEntity.ok(patientListDTO);
+		}).toList();
 	}
 
-	@GetMapping(value = "/patients/all", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<PatientDTO> getPatientAll(@RequestParam int code) throws OHServiceException {
+	@GetMapping(value = "/patients/all")
+	public PatientDTO getPatientAll(@RequestParam int code) throws OHServiceException {
 		LOGGER.info("Get patient for provided code even if logically deleted: '{}'.", code);
 		Patient patient = patientManager.getPatientAll(code);
 		if (patient == null) {
-			return ResponseEntity.status(HttpStatus.NO_CONTENT).body(null);
+			throw new OHAPIException(new OHExceptionMessage("Patient not found."), HttpStatus.NOT_FOUND);
 		}
-		PatientDTO patientDTO = patientMapper.map2DTO(patient);
-		return ResponseEntity.ok(patientDTO);
+
+		return patientMapper.map2DTO(patient);
 	}
 
-	@GetMapping(value = "/patients/nextcode", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Integer> getPatientNextCode() throws OHServiceException {
+	@GetMapping(value = "/patients/nextcode")
+	public Integer getPatientNextCode() throws OHServiceException {
 		LOGGER.info("Get patient next code.");
-		int nextCode = patientManager.getNextPatientCode();
-		return ResponseEntity.ok(nextCode);
+		return patientManager.getNextPatientCode();
 	}
 
-	@DeleteMapping(value = "/patients/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Boolean> deletePatient(@PathVariable int code) throws OHServiceException {
+	@DeleteMapping(value = "/patients/{code}")
+	public boolean deletePatient(@PathVariable int code) throws OHServiceException {
 		LOGGER.info("Delete patient code: '{}'.", code);
 		Patient patient = patientManager.getPatientById(code);
 
 		if (patient == null) {
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+			throw new OHAPIException(new OHExceptionMessage("Patient not found."), HttpStatus.NOT_FOUND);
 		}
+
 		try {
 			patientManager.deletePatient(patient);
+			return true;
 		} catch (OHServiceException serviceException) {
 			throw new OHAPIException(new OHExceptionMessage("Patient not deleted."));
 		}
-		return ResponseEntity.ok(true);
 	}
 
-	@GetMapping(value = "/patients/merge", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Boolean> mergePatients(@RequestParam int mergedcode, @RequestParam int code2) throws OHServiceException {
+	@GetMapping(value = "/patients/merge")
+	public boolean mergePatients(@RequestParam int mergedcode, @RequestParam int code2) throws OHServiceException {
 		LOGGER.info("Merge patient for code '{}' in patient for code '{}'.", code2, mergedcode);
 		Patient mergedPatient = patientManager.getPatientById(mergedcode);
 		Patient patient2 = patientManager.getPatientById(code2);
 		if (mergedPatient == null || patient2 == null) {
-			return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+			throw new OHAPIException(new OHExceptionMessage("Patient not found."), HttpStatus.NOT_FOUND);
 		}
+
 		try {
 			patientManager.mergePatient(mergedPatient, patient2);
+			return true;
 		} catch (OHServiceException serviceException) {
 			throw new OHAPIException(new OHExceptionMessage("Patients not merged."));
 		}
-		return ResponseEntity.ok(true);
 	}
 
-	@GetMapping(value = "/patients/cities", produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<List<String>> getPatientCities() throws OHServiceException {
+	@GetMapping(value = "/patients/cities")
+	public List<String> getPatientCities() throws OHServiceException {
 		LOGGER.info("Get all cities of the patients.");
-		return ResponseEntity.ok(patientManager.getCities());
+
+		return patientManager.getCities();
 	}
 }
